[package]
name = "paseto"
description = "An alternative token format to JWT"
version = "1.0.7"
repository = "https://github.com/instructure/paseto"
license = "MIT"
authors = [
  "Cynthia Coan <cynthia@coan.dev>"
]
edition = "2018"

[features]
default = ["v2", "easy_tokens"]
v1 = ["openssl"]
v2 = ["ed25519-dalek"]
easy_tokens = ["serde_json", "chrono-wasi"]

[dependencies]
base64 = "^0.11"
chrono-wasi = { version = "^0.4", optional = true, features = ["serde"] }
failure = "^0.1"
failure_derive = "^0.1"
openssl = { version = "~0.10.24", optional = true }
serde_json = { version = "^1.0.0", optional = true }
ed25519-dalek = { version = "1.0.0-pre", optional = true }
rand = "0.7"
constant_time_eq = "0.1"
chacha20poly1305 = "0.3"
aead = "0.2"
blake2 = "0.8"

[dev-dependencies]
hex = "^0.4.0"

[patch.crates-io]
clear_on_drop = { path = "clear_on_drop_wasi" }
